tests/snapshots/compile_file_o_all__scrutinee_reconstruction.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/scrutinee_reconstruction.hvm
---
@None = {2 * {2 a a}}

@Option.or = ({3 {2 @Option.or$C1 {2 @Option.or$C2 (a b)}} a} b)

@Option.or$C0 = (a (* a))

@Option.or$C1 = {2 * @Option.or$C0}

@Option.or$C2 = (* (a a))

@Some = (a {2 {2 a b} {2 * b}})

@main = a
  & @Option.or ~ (b (@None a))
  & @Some ~ (#5 b)
