tests/snapshots/compile_file_o_all__self_ref.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/self_ref.hvm
---
Errors:
In definition 'Foo':
  Definition is a reference to itself.
In definition 'main':
  Definition is a reference to itself.
