tests/snapshots/compile_file_o_all__snd.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/snd.bend
---
@main = a
  & @snd ~ ((0 42) a)

@snd = ((* a) a)
