tests/snapshots/compile_file_o_all__snd.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/snd.hvm
---
@4 = ([* a] a)
@main = a
& @4 ~ ([#0 #42] a)

