tests/snapshots/compile_file_o_all__spacing.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/spacing.bend
---
@main = ({b c} d)
  & (a a) ~ (b (c d))
