tests/snapshots/compile_file_o_all__spacing2.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/spacing2.bend
---
@main = c
  & (a a) ~ ((b b) c)
