tests/snapshots/compile_file_o_all__str.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/compile_file_o_all/str.bend
---
@String/Cons = (a (b ((1 (a (b c))) c)))

@String/Nil = ((0 a) a)

@main = f
  & @String/Cons ~ (109 (e f))
  & @String/Cons ~ (97 (d e))
  & @String/Cons ~ (105 (c d))
  & @String/Cons ~ (110 (b c))
  & @String/Cons ~ (32 (a b))
  & @String/Cons ~ (61 (@String/Nil a))
